update some files

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Dede Animation Studio  " />
-    <meta name="description" content="Creating Engaging Educational Experiences Through Animation and Augmented Reality" />
+    <meta
+      name="description"
+      content="Creating Engaging Educational Experiences Through Animation and Augmented Reality"
+    />
     <meta name="author" content="Mintesnot Yesmashewa" />
-    <meta name="keywords" content="animation, augmented reality, education, creativity" />
+    <meta
+      name="keywords"
+      content="animation, augmented reality, education, creativity"
+    />
     <meta name="copyright" content="Dede Animation Studio" />
     <title>DEDE-STUDIO</title>
     <link
@@ -18,18 +24,26 @@
     />
     <link rel="icon" type="image/x-icon" href="assets/images/logo.png" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
+
   <body>
     <div class="container">
       <header>
         <nav class="navbar">
-          <a href="/" class="logo"> <img alt="Logo" src="assets/images/logo.png" /> </a>
+          <a href="/" class="logo">
+            <img alt="Logo" src="assets/images/logo.png" />
+          </a>
           <div class="menu">
-            <a href="about.html"> About </a> <a href="#projects"> Projects </a> <a href="#"> Contact </a>
+            <a href="about.html"> About </a> <a href="#projects"> Projects </a>
+            <a href="#"> Contact </a>
             <div class="social-icons">
-              <a href="#"> <i class="fab fa-facebook-f"> </i> </a> <a href="#"> <i class="fab fa-twitter"> </i> </a>
+              <a href="#"> <i class="fab fa-facebook-f"> </i> </a>
+              <a href="#"> <i class="fab fa-twitter"> </i> </a>
             </div>
           </div>
           <i class="bar fa fa-bars" aria-hidden="true"></i>
@@ -37,38 +51,42 @@
       </header>
       <main>
         <div class="hero">
-          <video autoplay loop muted src="assets/videos/header-background-video.mp4" playsinline></video>
-          <div class="text-animation"><h1>Welcome to Dede Animation Studio</h1></div>
+          <video
+            autoplay
+            loop
+            muted
+            src="assets/videos/hero-video.mp4"
+            playsinline
+          ></video>
+          <div class="text-animation">
+            <h1>Welcome to Dede Animation Studio</h1>
+          </div>
           <a class="btn" href="#introduction"> Discover </a>
         </div>
         <a href="#" class="scroll-up"><i class="fas fa-chevron-up"></i></a>
 
         <div class="card-container" id="introduction">
           <h1>Social Media services</h1>
-          <p>Creating Engaging Educational Experiences Through Animation and Augmented Reality</p>
+          <p>
+            Creating Engaging Educational Experiences Through Animation and
+            Augmented Reality
+          </p>
           <div class="services">
             <div class="service">
               <i class="fa-solid fa-vr-cardboard"></i>
               <h3>Augmented Reality</h3>
               <p>
-                Girl when of ye snug poor draw. Mistake totally of in chiefly. Justice visitor him entered for. Continue
-                delicate as
+                By combining our animated books with AR technology, we bring
+                each story to life in a way that traditional books cannot.
               </p>
             </div>
-            <div class="service">
-              <i class="fas fa-video"></i>
-              <h3>Video Production</h3>
-              <p>
-                Continue delicate as unlocked entirely mr relation diverted in. Known not end fully being style hose whom down
-                kept
-              </p>
-            </div>
+
             <div class="service">
               <i class="fas fa-paint-brush"></i>
-              <h3>Digital illustration</h3>
+              <h3>Interactive Storybooks</h3>
               <p>
-                Wrong do point avoid by fruit learn or in death. So passage however besides invited comfort elderly be me. Walls
-                began
+                Fun, educational books with animation and interactive AR
+                elements.
               </p>
             </div>
           </div>
@@ -81,20 +99,25 @@
               <h2>Why Work With Us</h2>
 
               <p>
-                <strong> Innovative Approach </strong> - We are at the forefront of integrating animation and augmented reality
-                in education, creating a more engaging learning experience.
+                <strong> Innovative Approach </strong> - We are at the forefront
+                of integrating animation and augmented reality in education,
+                creating a more engaging learning experience.
               </p>
               <p>
-                <strong> Quality Content: </strong> -Our stories are carefully crafted, blending education with entertainment to
-                hold children’s attention and enhance their learning.
+                <strong> Quality Content: </strong> -Our stories are carefully
+                crafted, blending education with entertainment to hold
+                children’s attention and enhance their learning.
               </p>
               <p>
-                <strong> Child-Centered Design </strong> - Our content is designed with children in mind—fun, interactive, and
-                easy to understand.
+                <strong> Child-Centered Design </strong> - Our content is
+                designed with children in mind—fun, interactive, and easy to
+                understand.
               </p>
               <p>
-                <strong> Passion for Learning: </strong> -Our founder’s background in fine arts and design, coupled with a deep
-                understanding of educational needs, drives every project we create.
+                <strong> Passion for Learning: </strong> -Our founder’s
+                background in fine arts and design, coupled with a deep
+                understanding of educational needs, drives every project we
+                create.
               </p>
             </span>
           </div>
@@ -113,8 +136,9 @@
           <div class="content">
             <h1>Photo shooting and image editing services</h1>
             <p>
-              who eat she defective applauded departure joy. Get dissimilar not introduced day her apartment. Fully as taste he
-              mr do smile abode every. Luckily we have words offered article led
+              who eat she defective applauded departure joy. Get dissimilar not
+              introduced day her apartment. Fully as taste he mr do smile abode
+              every. Luckily we have words offered article led
             </p>
             <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
           </div>
@@ -131,8 +155,9 @@
           <div class="content">
             <h1>Photo shooting and image editing services</h1>
             <p>
-              who eat she defective applauded departure joy. Get dissimilar not introduced day her apartment. Fully as taste he
-              mr do smile abode every. Luckily we have words offered article led
+              who eat she defective applauded departure joy. Get dissimilar not
+              introduced day her apartment. Fully as taste he mr do smile abode
+              every. Luckily we have words offered article led
             </p>
             <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
           </div>
@@ -146,15 +171,18 @@
           <div class="content">
             <h1>Photo shooting and image editing services</h1>
             <p>
-              who eat she defective applauded departure joy. Get dissimilar not introduced day her apartment. Fully as taste he
-              mr do smile abode every. Luckily we have words offered article led
+              who eat she defective applauded departure joy. Get dissimilar not
+              introduced day her apartment. Fully as taste he mr do smile abode
+              every. Luckily we have words offered article led
             </p>
             <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
           </div>
         </div>
 
         <div id="projects" class="project-container">
-          <div class="header"><h1>Our Projects</h1></div>
+          <div class="header">
+            <h1>Our Projects</h1>
+          </div>
 
           <div class="projects">
             <div class="project">
@@ -164,7 +192,10 @@
                 src="https://storage.googleapis.com/a1aa/image/CdzLzUgBFfWexUxQIKwsopbkKrFHMfetgTHjap6cBZdezIqeE.jpg"
                 width="300"
               />
-              <p><a href=""> Online banking </a> - delivered to and to major company in pharmace ski jump from</p>
+              <p>
+                <a href=""> Online banking </a> - delivered to and to major
+                company in pharmace ski jump from
+              </p>
             </div>
             <div class="project">
               <img
@@ -173,7 +204,10 @@
                 src="https://storage.googleapis.com/a1aa/image/39hxM2lYuP5IGNS9fMFrVSae7UPM1aNoC6UQRbjBQr2aGR1TA.jpg"
                 width="300"
               />
-              <p><a href=""> Loans company </a> - enjoyed minutes related as at on on. Is fanny dried camping today</p>
+              <p>
+                <a href=""> Loans company </a> - enjoyed minutes related as at
+                on on. Is fanny dried camping today
+              </p>
             </div>
             <div class="project">
               <img
@@ -182,7 +216,10 @@
                 src="https://storage.googleapis.com/a1aa/image/34cLd2T6s7otBB7ne87rEzX5wfeGfvjFtzSfkMbnYjJJzIqeE.jpg"
                 width="300"
               />
-              <p><a href=""> Refinance firm </a> - distrusts an it contented perceived attending oh nouns here</p>
+              <p>
+                <a href=""> Refinance firm </a> - distrusts an it contented
+                perceived attending oh nouns here
+              </p>
             </div>
             <div class="project">
               <img
@@ -191,7 +228,10 @@
                 src="https://storage.googleapis.com/a1aa/image/6Rbi8SrUvcLCOdmolhL4e4Byc34c2c1wveWbZiPpV6WbGR1TA.jpg"
                 width="300"
               />
-              <p><a href=""> Financial products </a> - thoroughly estimating introduced stimulated why but front</p>
+              <p>
+                <a href=""> Financial products </a> - thoroughly estimating
+                introduced stimulated why but front
+              </p>
             </div>
             <div class="project">
               <img
@@ -200,7 +240,10 @@
                 src="https://storage.googleapis.com/a1aa/image/KXB6BJDuTnboENOWzL475K0LufhyIj98H3h4Bgx2onPPjo6JA.jpg"
                 width="300"
               />
-              <p><a href=""> Credit cards </a> - enjoyed minutes related as at on on. Is fanny dried out yesterday</p>
+              <p>
+                <a href=""> Credit cards </a> - enjoyed minutes related as at on
+                on. Is fanny dried out yesterday
+              </p>
             </div>
             <div class="project">
               <img
@@ -209,7 +252,10 @@
                 src="https://storage.googleapis.com/a1aa/image/3XP9Xjjxve02GyY80f3kgefUEVDw6ZhSIwZHTFxgnZk0ZEVPB.jpg"
                 width="300"
               />
-              <p><a href=""> Software robots </a> - as often me goodness as reserved raptures to mistaken</p>
+              <p>
+                <a href=""> Software robots </a> - as often me goodness as
+                reserved raptures to mistaken
+              </p>
             </div>
           </div>
         </div>
@@ -219,20 +265,27 @@
         <div class="footer-cont">
           <div>
             <h3>About Dede</h3>
-            <p>Creating Engaging Educational Experiences Through Animation and Augmented Reality</p>
+            <p>
+              Creating Engaging Educational Experiences Through Animation and
+              Augmented Reality
+            </p>
           </div>
 
           <div class="links">
             <h3>Links</h3>
             <p><a href="#">Important: Terms & Conditions, Privacy Policy</a></p>
-            <p><a href="#">Useful: Colorpicker, Icon Library, Illustrations</a></p>
+            <p>
+              <a href="#">Useful: Colorpicker, Icon Library, Illustrations</a>
+            </p>
             <p><a href="#">Menu: Home, Services, Projects, Contact</a></p>
           </div>
 
           <div>
             <div class="social-icons">
-              <a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-pinterest"></i></a> <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-pinterest"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
             <p>We would love to hear from you</p>
             <p><a href="mailto:contact@site.com">contact@site.com</a></p>
