modefi some files

--- a/index.html
+++ b/index.html
@@ -66,11 +66,7 @@
         <a href="#" class="scroll-up"><i class="fas fa-chevron-up"></i></a>
 
         <div class="card-container" id="introduction">
-          <h1>Social Media services</h1>
-          <p>
-            Creating Engaging Educational Experiences Through Animation and
-            Augmented Reality
-          </p>
+          <h1>Our service</h1>
           <div class="services">
             <div class="service">
               <i class="fa-solid fa-vr-cardboard"></i>
@@ -89,9 +85,79 @@
                 elements.
               </p>
             </div>
+            <div class="service">
+              <i class="fa"> 2D</i>
+              <h3>2D Animation</h3>
+              <p>
+                Fun, educational books with animation and interactive AR
+                elements.
+              </p>
+            </div>
           </div>
         </div>
-
+        <div id="projects" class="project-container">
+          <div class="header">
+            <h1>Our Projects</h1>
+          </div>
+          <div class="projects">
+            <div class="project">
+              <img
+                alt="A laptop with a coffee mug on a desk"
+                height="200"
+                src="assets/images/tiger-in-ar.jpeg"
+                width="300"
+              />
+              <p>
+                <a href=""> The Magical World of Animals </a> - An animated
+                storybook for children that teaches them about different animals
+                and their habitats, enhanced with AR animations that bring the
+                animals to life in the child’s environment.
+              </p>
+            </div>
+            <div class="project">
+              <img
+                alt="A hand holding headphones on a desk"
+                height="200"
+                src="assets/images/world-in-ar.jpeg"
+                width="300"
+              />
+              <p>
+                <a href=""> Space Exploration with Augmented Reality </a> - A
+                space-themed educational storybook where children can learn
+                about the solar system, galaxies, and the wonders of space
+                through animated characters and AR experiences
+              </p>
+            </div>
+            <div class="project">
+              <img
+                alt="A camera and accessories on a desk"
+                height="200"
+                src="assets/images/plant-in-ar.jpeg"
+                width="300"
+              />
+              <p>
+                <a href=""> Custom AR Storybooks for Schools</a> - We’ve
+                partnered with schools to create custom storybooks that teach
+                topics like history, geography, and science, enhanced with
+                interactive AR elements for better engagement and learning.
+              </p>
+            </div>
+            <div class="project">
+              <img
+                alt="A camera and accessories on a desk"
+                height="200"
+                src="assets/images/plant-in-ar.jpeg"
+                width="300"
+              />
+              <p>
+                <a href=""> Custom AR Storybooks for Schools</a> - We’ve
+                partnered with schools to create custom storybooks that teach
+                topics like history, geography, and science, enhanced with
+                interactive AR elements for better engagement and learning.
+              </p>
+            </div>
+          </div>
+        </div>
         <div class="work-withus-container">
           <div class="image-cont"><img src="" alt="" srcset="" /></div>
           <div class="text-section">
@@ -122,7 +188,6 @@
             </span>
           </div>
         </div>
-
         <div class="image-list-container">
           <div class="image">
             <img
@@ -134,11 +199,12 @@
           </div>
 
           <div class="content">
-            <h1>Photo shooting and image editing services</h1>
+            <h1>Educational Storybook Creation</h1>
             <p>
-              who eat she defective applauded departure joy. Get dissimilar not
-              introduced day her apartment. Fully as taste he mr do smile abode
-              every. Luckily we have words offered article led
+              We specialize in developing illustrated, animated storybooks that
+              make learning fun. These storybooks can be enhanced with AR
+              features to bring characters and scenes to life, allowing children
+              to explore stories in a whole new way.
             </p>
             <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
           </div>
@@ -153,11 +219,12 @@
             />
           </div>
           <div class="content">
-            <h1>Photo shooting and image editing services</h1>
+            <h1>Augmented Reality Experiences</h1>
             <p>
-              who eat she defective applauded departure joy. Get dissimilar not
-              introduced day her apartment. Fully as taste he mr do smile abode
-              every. Luckily we have words offered article led
+              We create AR experiences that bring education to life. Through
+              interactive AR, we enable children to learn through play, whether
+              it’s by solving puzzles, interacting with animated characters, or
+              exploring new concepts in a hands-on way.
             </p>
             <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
           </div>
@@ -169,94 +236,15 @@
             width="450" />
           </div>
           <div class="content">
-            <h1>Photo shooting and image editing services</h1>
+            <h1>Custom Educational Content</h1>
             <p>
-              who eat she defective applauded departure joy. Get dissimilar not
-              introduced day her apartment. Fully as taste he mr do smile abode
-              every. Luckily we have words offered article led
+              Whether you are a school, library, or organization, we offer
+              custom solutions to meet your specific educational needs. From
+              tailored educational apps to AR-enhanced storybooks, we create
+              personalized content that supports your curriculum and engages
+              your audience.
             </p>
             <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
-          </div>
-        </div>
-
-        <div id="projects" class="project-container">
-          <div class="header">
-            <h1>Our Projects</h1>
-          </div>
-
-          <div class="projects">
-            <div class="project">
-              <img
-                alt="A laptop with a coffee mug on a desk"
-                height="200"
-                src="https://storage.googleapis.com/a1aa/image/CdzLzUgBFfWexUxQIKwsopbkKrFHMfetgTHjap6cBZdezIqeE.jpg"
-                width="300"
-              />
-              <p>
-                <a href=""> Online banking </a> - delivered to and to major
-                company in pharmace ski jump from
-              </p>
-            </div>
-            <div class="project">
-              <img
-                alt="A hand holding headphones on a desk"
-                height="200"
-                src="https://storage.googleapis.com/a1aa/image/39hxM2lYuP5IGNS9fMFrVSae7UPM1aNoC6UQRbjBQr2aGR1TA.jpg"
-                width="300"
-              />
-              <p>
-                <a href=""> Loans company </a> - enjoyed minutes related as at
-                on on. Is fanny dried camping today
-              </p>
-            </div>
-            <div class="project">
-              <img
-                alt="A camera and accessories on a desk"
-                height="200"
-                src="https://storage.googleapis.com/a1aa/image/34cLd2T6s7otBB7ne87rEzX5wfeGfvjFtzSfkMbnYjJJzIqeE.jpg"
-                width="300"
-              />
-              <p>
-                <a href=""> Refinance firm </a> - distrusts an it contented
-                perceived attending oh nouns here
-              </p>
-            </div>
-            <div class="project">
-              <img
-                alt="A hand writing on a tablet"
-                height="200"
-                src="https://storage.googleapis.com/a1aa/image/6Rbi8SrUvcLCOdmolhL4e4Byc34c2c1wveWbZiPpV6WbGR1TA.jpg"
-                width="300"
-              />
-              <p>
-                <a href=""> Financial products </a> - thoroughly estimating
-                introduced stimulated why but front
-              </p>
-            </div>
-            <div class="project">
-              <img
-                alt="A laptop showing a website"
-                height="200"
-                src="https://storage.googleapis.com/a1aa/image/KXB6BJDuTnboENOWzL475K0LufhyIj98H3h4Bgx2onPPjo6JA.jpg"
-                width="300"
-              />
-              <p>
-                <a href=""> Credit cards </a> - enjoyed minutes related as at on
-                on. Is fanny dried out yesterday
-              </p>
-            </div>
-            <div class="project">
-              <img
-                alt="Various tech gadgets on a desk"
-                height="200"
-                src="https://storage.googleapis.com/a1aa/image/3XP9Xjjxve02GyY80f3kgefUEVDw6ZhSIwZHTFxgnZk0ZEVPB.jpg"
-                width="300"
-              />
-              <p>
-                <a href=""> Software robots </a> - as often me goodness as
-                reserved raptures to mistaken
-              </p>
-            </div>
           </div>
         </div>
       </main>
