modifi footer element

--- a/index.html
+++ b/index.html
@@ -252,37 +252,37 @@
       <footer>
         <div class="footer-cont">
           <div>
-            <h3>About Dede</h3>
+            <h3>Dada Studio</h3>
             <p>
               Creating Engaging Educational Experiences Through Animation and
               Augmented Reality
             </p>
           </div>
 
-          <div class="links">
-            <h3>Links</h3>
-            <p><a href="#">Important: Terms & Conditions, Privacy Policy</a></p>
-            <p>
-              <a href="#">Useful: Colorpicker, Icon Library, Illustrations</a>
-            </p>
-            <p><a href="#">Menu: Home, Services, Projects, Contact</a></p>
-          </div>
-
           <div>
+            <h3>Social Links</h3>
+
             <div class="social-icons">
               <a href="#"><i class="fab fa-facebook-f"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
               <a href="#"><i class="fab fa-pinterest"></i></a>
               <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
-            <p>We would love to hear from you</p>
+          </div>
+          <div>
+            <h3>Contact Us</h3>
+
+            <p>
+              We would love to hear from you! Whether you’re interested in our
+              products, have questions about our services, or want to
+              collaborate, feel free to reach out to us.
+            </p>
             <p><a href="mailto:contact@site.com">contact@site.com</a></p>
           </div>
         </div>
       </footer>
       <div class="footer-bottom">
-        <p>Copyright © Your name</p>
-        <p>Distributed by: Themewagon</p>
+        <p>© 2024 Dada Studio</p>
       </div>
     </div>
     <script src="assets/js/script.js"></script>
