add some image and modefi some files

--- a/index.html
+++ b/index.html
@@ -104,60 +104,143 @@
               <img
                 alt="A laptop with a coffee mug on a desk"
                 height="200"
-                src="assets/images/tiger-in-ar.jpeg"
+                src="assets/images/butuye.jpg"
                 width="300"
               />
               <p>
-                <a href=""> The Magical World of Animals </a> - An animated
-                storybook for children that teaches them about different animals
-                and their habitats, enhanced with AR animations that bring the
-                animals to life in the child’s environment.
+                <a href=""> Butuye(ቡጡዬ) </a> - Butuye is a captivating 2D
+                animated kids’ show designed to educate and entertain young
+                viewers by exploring a variety of fascinating topics in every
+                episode.
               </p>
             </div>
             <div class="project">
               <img
                 alt="A hand holding headphones on a desk"
                 height="200"
-                src="assets/images/world-in-ar.jpeg"
+                src="assets/images/books.jpg"
                 width="300"
               />
               <p>
-                <a href=""> Space Exploration with Augmented Reality </a> - A
-                space-themed educational storybook where children can learn
-                about the solar system, galaxies, and the wonders of space
-                through animated characters and AR experiences
+                <a href=""> Yetateyana Tsegur (የታቲያና ጸጉር) </a> - A space-themed
+                educational storybook where children can learn about the solar
+                system, galaxies, and the wonders of space through animated
+                characters and AR experiences
               </p>
             </div>
             <div class="project">
               <img
                 alt="A camera and accessories on a desk"
                 height="200"
-                src="assets/images/plant-in-ar.jpeg"
+                src="assets/images/mender.jpg"
                 width="300"
               />
               <p>
-                <a href=""> Custom AR Storybooks for Schools</a> - We’ve
-                partnered with schools to create custom storybooks that teach
-                topics like history, geography, and science, enhanced with
-                interactive AR elements for better engagement and learning.
-              </p>
-            </div>
-            <div class="project">
-              <img
-                alt="A camera and accessories on a desk"
-                height="200"
-                src="assets/images/plant-in-ar.jpeg"
-                width="300"
-              />
-              <p>
-                <a href=""> Custom AR Storybooks for Schools</a> - We’ve
-                partnered with schools to create custom storybooks that teach
-                topics like history, geography, and science, enhanced with
-                interactive AR elements for better engagement and learning.
+                <a href=""> Mender (መንደር) </a> - In the vibrant town of Mender,
+                the eccentric yet lovable family of Dashe and Ete, along with
+                their three kids and their witty maid Bilcha, navigate the ups
+                and downs of everyday life, turning mundane moments into
+                laugh-out-loud adventures while learning valuable lessons along
+                the way.
               </p>
             </div>
           </div>
         </div>
+        <div id="projects" class="project-container">
+          <div class="iframe-container">
+            <iframe
+              height="355"
+              src="https://www.youtube-nocookie.com/embed/FKCmexqxKVE?si=uIQoYEG0qzvZnsJ-"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+        <div class="image-list-container">
+          <div class="image">
+            <video
+              alt="People discussing in front of a screen"
+              height="300"
+              src="assets/videos/hero-video.mp4"
+              muted
+              loop
+              poster="https://images.unsplash.com/photo-1609921212029-bb5a28e60960?q=80&w=2052&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              width="450"
+            ></video>
+            <button>
+              <i class="fa-solid fa-play"></i>
+            </button>
+          </div>
+          <div class="content">
+            <h1>Augmented Reality Experiences</h1>
+            <p>
+              We create AR experiences that bring education to life. Through
+              interactive AR, we enable children to learn through play, whether
+              it’s by solving puzzles, interacting with animated characters, or
+              exploring new concepts in a hands-on way.
+            </p>
+            <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
+          </div>
+        </div>
+        <div class="image-list-container">
+          <div class="image">
+            <video
+              alt="People discussing in front of a screen"
+              height="300"
+              src="assets/videos/hero-video.mp4"
+              muted
+              loop
+              poster="https://images.unsplash.com/photo-1609921212029-bb5a28e60960?q=80&w=2052&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              width="450"
+            ></video>
+            <button>
+              <i class="fa-solid fa-play"></i>
+            </button>
+          </div>
+
+          <div class="content">
+            <h1>Educational Storybook Creation</h1>
+            <p>
+              We specialize in developing illustrated, animated storybooks that
+              make learning fun. These storybooks can be enhanced with AR
+              features to bring characters and scenes to life, allowing children
+              to explore stories in a whole new way.
+            </p>
+            <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
+          </div>
+        </div>
+
+        <div class="image-list-container">
+          <div class="image">
+            <video
+              alt="People discussing in front of a screen"
+              height="300"
+              src="assets/videos/hero-video.mp4"
+              muted
+              loop
+              poster="https://images.unsplash.com/photo-1609921212029-bb5a28e60960?q=80&w=2052&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              width="450"
+            ></video>
+            <button>
+              <i class="fa-solid fa-play"></i>
+            </button>
+          </div>
+          <div class="content">
+            <h1>Custom Educational Content</h1>
+            <p>
+              Whether you are a school, library, or organization, we offer
+              custom solutions to meet your specific educational needs. From
+              tailored educational apps to AR-enhanced storybooks, we create
+              personalized content that supports your curriculum and engages
+              your audience.
+            </p>
+            <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
+          </div>
+        </div>
+
         <div class="work-withus-container">
           <div class="image-cont"><img src="" alt="" srcset="" /></div>
           <div class="text-section">
@@ -188,63 +271,58 @@
             </span>
           </div>
         </div>
-        <div class="image-list-container">
-          <div class="image">
-            <img
-              alt="People discussing in front of a screen"
-              height="300"
-              src="https://images.unsplash.com/photo-1558655146-605d86ed31b3?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              width="450"
-            />
-          </div>
 
-          <div class="content">
-            <h1>Educational Storybook Creation</h1>
-            <p>
-              We specialize in developing illustrated, animated storybooks that
-              make learning fun. These storybooks can be enhanced with AR
-              features to bring characters and scenes to life, allowing children
-              to explore stories in a whole new way.
-            </p>
-            <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
-          </div>
-        </div>
-        <div class="image-list-container">
-          <div class="image">
-            <img
-              alt="People discussing in front of a screen"
-              height="300"
-              src="https://images.unsplash.com/photo-1609921212029-bb5a28e60960?q=80&w=2052&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              width="450"
-            />
-          </div>
-          <div class="content">
-            <h1>Augmented Reality Experiences</h1>
-            <p>
-              We create AR experiences that bring education to life. Through
-              interactive AR, we enable children to learn through play, whether
-              it’s by solving puzzles, interacting with animated characters, or
-              exploring new concepts in a hands-on way.
-            </p>
-            <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
-          </div>
-        </div>
-        <div class="image-list-container">
-          <div class="image">
-            <img alt="People discussing in front of a screen" height="300"
-            src=https://images.unsplash.com/photo-1572044162444-ad60f128bdea?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-            width="450" />
-          </div>
-          <div class="content">
-            <h1>Custom Educational Content</h1>
-            <p>
-              Whether you are a school, library, or organization, we offer
-              custom solutions to meet your specific educational needs. From
-              tailored educational apps to AR-enhanced storybooks, we create
-              personalized content that supports your curriculum and engages
-              your audience.
-            </p>
-            <a href="#"> Learn more <i class="fas fa-arrow-right"> </i> </a>
+        <div class="team-container client" id="introduction">
+          <h1>Clients</h1>
+          <div class="services">
+            <div class="service">
+              <img src="assets/images/girl-icon.png" alt="" />
+              <br />
+
+              <a href="">Bemnet Yemesgen</a>
+              <p>
+                "Dede is a fantastic art studio to work with. They have great
+                attitude and their work is fun as well as thoughtful."
+              </p>
+              <h3>Girl Effect, Brand Director</h3>
+            </div>
+            <div class="service">
+              <img src="assets/images/girl-icon.png" alt="" />
+              <br />
+
+              <p>
+                "We have had the pleasure of working with Dede studios on a
+                couple of projects. We had hard deadlines and through their
+                day-and-night dedicated approach, we were able to receive a
+                first-class work from Dede"
+              </p>
+              <h3>Girl Effect, Brand Director</h3>
+            </div>
+            <div class="service">
+              <img src="assets/images/girl-icon.png" alt="" />
+              <br />
+
+              <p>
+                "Looking to make a set of posters for farmers’ training, Dede
+                Studio has not been only a very good graphic designer, but also
+                an advisor. The drawings realized, the design, the follow up,
+                everything was very professional. It was a fruitful
+                collaboration and the farmers’ feedbacks have been very positive
+                !"
+              </p>
+              <h3>Barley Expert – Boortmalt Ethiopia</h3>
+            </div>
+            <div class="service">
+              <img src="assets/images/girl-icon.png" alt="" />
+              <a href="">Bemnet Yemesgen</a>
+              <br />
+
+              <p>
+                "Dede is a fantastic art studio to work with. They have great
+                attitude and their work is fun as well as thoughtful."
+              </p>
+              <h3>Girl Effect, Brand Director</h3>
+            </div>
           </div>
         </div>
       </main>
